@@ -57,7 +57,7 @@ AC_CHECK_SIZEOF([size_t])
 PKG_CHECK_MODULES(GLIB2, [glib-2.0])
 PKG_CHECK_MODULES(GTHREAD2, [gthread-2.0])
 CFLAGS="$CFLAGS $GLIB2_CFLAGS $GTHREAD2_CFLAGS"
-LDFLAGS="$LDFLAGS $GLIB2_LIBS $GTHREAD2_LIBS"
+LDFLAGS="$LDFLAGS $GLIB2_LIBS $GTHREAD2_LIBS -lcrypto"
 
 AC_CHECK_FUNC([g_list_free_full], AC_DEFINE(HAVE_GLIB_FREE_FULL, 1, [g_list_free_full is available since glib 2.28]))
 
